--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 readme = "README.md"
 requires-python = ">=3.13,<4.0"
-dependencies = [ "fastapi[standard] (>=0.116.1,<0.117.0)" ]
+dependencies = [ "fastapi[standard] (>=0.116.1,<0.117.0)", "pandas (>=2.3.2,<3.0.0)", "aiofiles (>=24.1.0,<25.0.0)", "google-generativeai (>=0.8.5,<0.9.0)", "dotenv-python (>=0.0.1,<0.0.2)", "python-dotenv (>=1.1.1,<2.0.0)" ]
 
 
 [[project.authors]]
