--- a/.docker/.env.example
+++ b/.docker/.env.example
@@ -7,3 +7,4 @@ DATAPROCESSOR_POSTGRES_HOST=db
 DATAPROCESSOR_BACKEND_PORT=8000
 DATAPROCESSOR_BACKEND_HOST=0.0.0.0
 GEMINI_SECRET_KEY=""
+OPENAI_SECRET_KEY=""
