--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,13 @@ services:
     volumes:
       - data-db:/var/lib/postgresql/data
 
+  redis:
+    image: redis
+    container_name: cachedb
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-cache_data:/data
   backend:
     image: data_processor_backend
     container_name: backend
@@ -31,4 +38,5 @@ services:
       - ./backend/:/code
 
 volumes:
+  redis-cache_data:
   data-db:
