--- a/.docker/requirements.txt
+++ b/.docker/requirements.txt
@@ -35,6 +35,7 @@ markdown-it-py==4.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 numpy==2.2.6
+openai==1.104.0
 packaging==25.0
 pandas==2.3.2
 pluggy==1.6.0
