chore: add ui container

--- a/.docker/.env.example
+++ b/.docker/.env.example
@@ -1,10 +1,6 @@
-DATAPROCESSOR_POSTGRES_DB=fastapi
-DATAPROCESSOR_POSTGRES_USER=fastapi
-DATAPROCESSOR_POSTGRES_PASSWORD=fastapi123
-DATAPROCESSOR_POSTGRES_ROOT_PASSWORD=fastapi123
-DATAPROCESSOR_POSTGRES_PORT=5432
-DATAPROCESSOR_POSTGRES_HOST=db
 DATAPROCESSOR_BACKEND_PORT=8000
 DATAPROCESSOR_BACKEND_HOST=0.0.0.0
+DATAPROCESSOR_FRONTEND_PORT=3001
+DATAPROCESSOR_FRONTEND_HOST=0.0.0.0
 GEMINI_SECRET_KEY=""
 OPENAI_SECRET_KEY=""
