--- a/.docker/.env.example
+++ b/.docker/.env.example
@@ -2,5 +2,5 @@ DATAPROCESSOR_BACKEND_PORT=8000
 DATAPROCESSOR_BACKEND_HOST=0.0.0.0
 DATAPROCESSOR_FRONTEND_PORT=3001
 DATAPROCESSOR_FRONTEND_HOST=0.0.0.0
-GEMINI_SECRET_KEY=""
-OPENAI_SECRET_KEY=""
+DATAPROCESSOR_GEMINI_SECRET_KEY=""
+DATAPROCESSOR_OPENAI_SECRET_KEY=""
